--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Time Consumer Tasks Table</h1>
+  <h1>{{ title }} Table</h1>
   <p class="lead">Since time-consumers tasks are an indication of a problem with that task, <br> we want to have a tool that allows to easily identify them.</p>
   <table class="table table-striped">
   <thead>
